deployments/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev

---
apiVersion: v1
kind: Namespace
metadata:
  name: stg
  labels:
    name: stg

---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
