deployments/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  replicas: 1  # Change to 1 for stg, 2 for prod
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
        service: order
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: order
        image: 447733314827.dkr.ecr.us-east-1.amazonaws.com/lwplabs-order:latest
        imagePullPolicy: Always

        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

        livenessProbe:
          exec:
            command:
            - test
            - -f
            - /tmp/worker_healthy
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3

      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: metrics
  selector:
    app: order
  sessionAffinity: None
